#155 Remove deprecated method form Istio client